--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/testsolodb
+spring.datasource.url=jdbc:postgresql://10.1.43.37:5432/testsolodb
 spring.datasource.username=postgres
 spring.datasource.password=drni
 
